--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@suspensive/react": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
